Fix bug where notes did not have word wrap css property

--- a/recipy/static/style/recipy.scss
+++ b/recipy/static/style/recipy.scss
@@ -301,9 +301,10 @@ $page-gutter-width: 900px;
 .recipe-notes {
     margin: 3rem 0 1rem 1.5rem;
 
-    &, pre {
+    pre {
         font-family: sans-serif;
         font-style: italic;
+        white-space: pre-wrap;
     }
 
     @media print {
